# OpenRoboOLP

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_win64.ps1  generate_docx.py  index.html  install_pip_deps.bat  install_pip_deps.ps1  olp.py  olp.spec  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  test_simple.py  打包说明.md  部署指南.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.trae/documents/: arch.md  prd.md
docs/: post_dev_guide.md
examples/: README.md  pick_and_place.py  test_opengl.py  welding_path.py
examples/gui_demo/: README.md  python_viewer.py
models/: README.md
models/lerobot/so101/meshes/collision/: link1.STL  link3.STL  link4.STL  link6.STL
models/lerobot/so101/meshes/visual/: base_link.STL  link2.STL  link5.STL
models/lerobot/so101/urdf/: so101.urdf
models/ur/: test_6dof.urdf
plugins/: README.md
python/orolp/: __init__.py  pose.py  program.py  robot.py  simulation.py
python/orolp/post/: abb_rapid.py  base.py  fanuc_tp.py  huichuan_inoteach.py  kuka_krc4.py  ur_script.py
python/tests/: test_robot.py
src/: App.tsx
src/components/: Footer.tsx  Navbar.tsx
src/core/: binding.cpp  collision.cpp  collision.h  motion.cpp  motion.h  robot.cpp  robot.h
src/gui/: CMakeLists.txt  README.md  joint_panel.cpp  joint_panel.h  main.cpp  main_window.cpp  main_window.h  robot_loader.cpp  robot_loader.h  shader_manager.cpp  shader_manager.h  viewport_3d.cpp  viewport_3d.h
src/pages/: Download.tsx  Home.tsx  Products.tsx
